[gd_scene load_steps=44 format=3 uid="uid://80kjpi14t1b4"]

[ext_resource type="Texture2D" uid="uid://dh47ek2ay8j3q" path="res://assets/characters/slime.png" id="1_hpwfp"]
[ext_resource type="Script" path="res://scripts/slime.gd" id="1_j22ma"]

[sub_resource type="CircleShape2D" id="CircleShape2D_74cn6"]
radius = 5.0

[sub_resource type="Animation" id="Animation_n65ah"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_komgl"]
resource_name = "death_left"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [28, 29, 30, 31, 32]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_ssh2o"]
resource_name = "death_right"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [28, 29, 30, 31, 32]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_q51g2"]
resource_name = "hit_left"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [21, 22, 23]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"hit_finished"
}]
}

[sub_resource type="Animation" id="Animation_06ex1"]
resource_name = "hit_right"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [21, 22, 23]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"hit_finished"
}]
}

[sub_resource type="Animation" id="Animation_vdgc5"]
resource_name = "idle_bounce_left"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [7, 8, 9, 10, 11, 12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="Animation" id="Animation_vjelr"]
resource_name = "idle_bounce_right"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [7, 8, 9, 10, 11, 12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}

[sub_resource type="Animation" id="Animation_abqmp"]
resource_name = "idle_left"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="Animation" id="Animation_vahqt"]
resource_name = "idle_right"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}

[sub_resource type="Animation" id="Animation_fdhej"]
resource_name = "jump_left"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [14, 15, 16, 17, 18, 19, 20]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="Animation" id="Animation_gcav4"]
resource_name = "jump_right"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [14, 15, 16, 17, 18, 19, 20]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dmh3e"]
_data = {
"RESET": SubResource("Animation_n65ah"),
"death_left": SubResource("Animation_komgl"),
"death_right": SubResource("Animation_ssh2o"),
"hit_left": SubResource("Animation_q51g2"),
"hit_right": SubResource("Animation_06ex1"),
"idle_bounce_left": SubResource("Animation_vdgc5"),
"idle_bounce_right": SubResource("Animation_vjelr"),
"idle_left": SubResource("Animation_abqmp"),
"idle_right": SubResource("Animation_vahqt"),
"jump_left": SubResource("Animation_fdhej"),
"jump_right": SubResource("Animation_gcav4")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_kewow"]
animation = &"death_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lgnue"]
animation = &"death_left"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_op01x"]
blend_point_0/node = SubResource("AnimationNodeAnimation_kewow")
blend_point_0/pos = 1.0
blend_point_1/node = SubResource("AnimationNodeAnimation_lgnue")
blend_point_1/pos = -1.0
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tvnnw"]
animation = &"hit_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_i78iy"]
animation = &"hit_left"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_oegpx"]
blend_point_0/node = SubResource("AnimationNodeAnimation_tvnnw")
blend_point_0/pos = 1.0
blend_point_1/node = SubResource("AnimationNodeAnimation_i78iy")
blend_point_1/pos = -1.0
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_yakrl"]
animation = &"idle_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3awit"]
animation = &"idle_left"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_qkeu7"]
blend_point_0/node = SubResource("AnimationNodeAnimation_yakrl")
blend_point_0/pos = 1.0
blend_point_1/node = SubResource("AnimationNodeAnimation_3awit")
blend_point_1/pos = -1.0
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6bsrn"]
animation = &"idle_bounce_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7vg58"]
animation = &"idle_bounce_left"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_6o3sf"]
blend_point_0/node = SubResource("AnimationNodeAnimation_6bsrn")
blend_point_0/pos = 1.0
blend_point_1/node = SubResource("AnimationNodeAnimation_7vg58")
blend_point_1/pos = -1.0
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hukx3"]
animation = &"jump_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ms5qi"]
animation = &"jump_left"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_eyrn1"]
blend_point_0/node = SubResource("AnimationNodeAnimation_hukx3")
blend_point_0/pos = 1.0
blend_point_1/node = SubResource("AnimationNodeAnimation_ms5qi")
blend_point_1/pos = -1.0
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_uquxg"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_s2h26"]
advance_mode = 0

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_agxyj"]
advance_mode = 0

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_x6jif"]
advance_mode = 0

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_w6map"]
advance_mode = 0

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xsvjq"]
advance_mode = 0

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_u78n1"]
advance_mode = 0

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7wt7f"]
advance_mode = 0

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_mxfu7"]
advance_mode = 0

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_3w70f"]
advance_mode = 0

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_62t7t"]
states/death/node = SubResource("AnimationNodeBlendSpace1D_op01x")
states/death/position = Vector2(707.72, 5.97498)
states/hit/node = SubResource("AnimationNodeBlendSpace1D_oegpx")
states/hit/position = Vector2(517.72, 5.09997)
states/idle/node = SubResource("AnimationNodeBlendSpace1D_qkeu7")
states/idle/position = Vector2(352.5, 99.75)
states/idle_bounce/node = SubResource("AnimationNodeBlendSpace1D_6o3sf")
states/idle_bounce/position = Vector2(516, 99.875)
states/jump/node = SubResource("AnimationNodeBlendSpace1D_eyrn1")
states/jump/position = Vector2(708.5, 99.875)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_uquxg"), "idle", "idle_bounce", SubResource("AnimationNodeStateMachineTransition_s2h26"), "idle_bounce", "idle", SubResource("AnimationNodeStateMachineTransition_agxyj"), "idle_bounce", "jump", SubResource("AnimationNodeStateMachineTransition_x6jif"), "jump", "idle_bounce", SubResource("AnimationNodeStateMachineTransition_w6map"), "jump", "hit", SubResource("AnimationNodeStateMachineTransition_xsvjq"), "idle_bounce", "hit", SubResource("AnimationNodeStateMachineTransition_u78n1"), "idle", "hit", SubResource("AnimationNodeStateMachineTransition_7wt7f"), "hit", "idle", SubResource("AnimationNodeStateMachineTransition_mxfu7"), "hit", "death", SubResource("AnimationNodeStateMachineTransition_3w70f")]
graph_offset = Vector2(-34.44, -89.1825)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ls18h"]
radius = 5.0
height = 16.0

[sub_resource type="CircleShape2D" id="CircleShape2D_qvq6o"]
radius = 75.0

[node name="Slime" type="CharacterBody2D" groups=["Enemies"]]
script = ExtResource("1_j22ma")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_hpwfp")
hframes = 7
vframes = 5
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
rotation = 1.5708
shape = SubResource("CircleShape2D_74cn6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dmh3e")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dmh3e")
}
tree_root = SubResource("AnimationNodeStateMachine_62t7t")
anim_player = NodePath("../AnimationPlayer")
parameters/death/blend_position = 0
parameters/hit/blend_position = 0
parameters/idle/blend_position = 0
parameters/idle_bounce/blend_position = 0
parameters/jump/blend_position = 0

[node name="DamageDetector" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageDetector"]
position = Vector2(0, 2)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_ls18h")

[node name="PlayerDetector" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource("CircleShape2D_qvq6o")

[node name="BounceTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="DamageDetector" to="." method="_on_damage_detector_body_entered"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_player_detector_body_exited"]
[connection signal="timeout" from="BounceTimer" to="." method="_on_bounce_timer_timeout"]
